--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 Django==4.0.8
+django-axes==5.40.1
 django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.13.1
