--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ GROUP_ID=4
 PORT_PREFIX=2100
 DOMAIN=localhost
 PRODUCTION=True
-PROTOCOL=http
+PROTOCOL=https
 
 DJANGO_SUPERUSER_PASSWORD=password1
 DJANGO_SUPERUSER_USERNAME=admin1
