--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,9 @@ http {
     client_max_body_size 10M;
 
     server {
-        listen       80;
+        listen       80 ssl;
+        ssl_certificate nginx-selfsigned.crt;
+        ssl_certificate_key nginx-selfsigned.key;
         server_name  localhost;
 	add_header X-Content-Type-Options nosniff;
 
