--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,6 +46,7 @@ http {
           proxy_http_version 1.1;
           proxy_set_header Host $host:${PORT_PREFIX}${GROUP_ID};
         }
+        add_header Content-Security-Policy "default-src 'self';";
     }
 }
 
