update nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,8 @@ http {
         ssl_certificate nginx-selfsigned.crt;
         ssl_certificate_key nginx-selfsigned.key;
         server_name  localhost;
-	add_header X-Content-Type-Options nosniff;
+	      add_header X-Content-Type-Options nosniff;
+        add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline';";
 
         # Pass requests to the frontend
         location / {
@@ -46,7 +47,6 @@ http {
           proxy_http_version 1.1;
           proxy_set_header Host $host:${PORT_PREFIX}${GROUP_ID};
         }
-        add_header Content-Security-Policy "default-src 'self';";
     }
 }
 
